--- a/parents_heights_vs_children_heights.ipynb
+++ b/parents_heights_vs_children_heights.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "11IKFndN_JgkPk7vtLA8c4HhAUan6r1CE",
-      "authorship_tag": "ABX9TyPdg5OHIc6JyiteBYwMPF9M",
+      "authorship_tag": "ABX9TyOhydWBFg8jdiceYtM2ybW/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2403,22 +2403,29 @@
         "    \"\"\"\n",
         "    return np.sqrt(mean_squared_log_error(y_test, y_preds))\n",
         "\n",
+        "def rmse(y_test, y_preds):\n",
+        "    \"\"\"\n",
+        "    Calculate root mean squared error between predictions and true labels\n",
+        "    \"\"\"\n",
+        "    return np.sqrt(mean_squared_error(y_test, y_preds))\n",
+        "\n",
         "# Create an evaluation function\n",
         "def evaluate_model(model):\n",
         "    \"\"\"\n",
         "    Performs evaluation comparison on y_true labels vs. y_pred labels on a regresion model.\n",
         "    \"\"\"\n",
         "    y_preds = model.predict(x_test)\n",
-        "    scores = {'Mean Absolute Error': mean_absolute_error(y_test, y_preds),\n",
+        "    scores = {'Mean Absolute Error (MAE)': mean_absolute_error(y_test, y_preds),\n",
         "              'R^2': r2_score(y_test, y_preds),\n",
-        "              'Valid RMSLE': rmsle(y_test, y_preds)}\n",
+        "              'Root Mean Squared Log Error RMSLE': rmsle(y_test, y_preds),\n",
+        "              'Root Mean Squared Error (RMSE)': rmse(y_test, y_preds)}\n",
         "\n",
         "    return scores"
       ],
       "metadata": {
         "id": "O0gh0T1PXX4v"
       },
-      "execution_count": 94,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -2431,21 +2438,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8YwSJn6YW6Ud",
-        "outputId": "efd505ad-7514-48b7-eca4-ce18ff6cf8f8"
+        "outputId": "0f6004e6-9f3a-46c9-9da2-59e924180e62"
       },
-      "execution_count": 95,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'Mean Absolute Error': 1.3749304812834253,\n",
+              "{'Mean Absolute Error (MAE)': 1.3749304812834253,\n",
               " 'R^2': 0.7402654519464604,\n",
-              " 'Valid RMSLE': 0.026670336382480793}"
+              " 'Root Mean Squared Log Error RMSLE': 0.026670336382480793,\n",
+              " 'Root Mean Squared Error (RMSE)': 1.822772305310061}"
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 109
         }
       ]
     },
@@ -2468,9 +2476,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N1a7HSngbuDh",
-        "outputId": "dcdd2e8f-78d3-4791-c70a-577c8f8782e1"
+        "outputId": "f4897428-254d-4a08-a84b-5c86a7a7f627"
       },
-      "execution_count": 96,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2496,7 +2504,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 110
         }
       ]
     },
@@ -2534,17 +2542,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kt3kF-Wccnc8",
-        "outputId": "098f5bce-9501-48e3-a0e9-57f4850e2919"
+        "outputId": "16ac2205-efa9-4397-fd4e-633ea87b0784"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 144 candidates, totalling 720 fits\n",
-            "The Best Parameters are: {'bootstrap': False, 'max_depth': 30, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 200}\n",
-            "The Best Score is: 0.7329782917669867\n"
+            "Fitting 5 folds for each of 144 candidates, totalling 720 fits\n"
           ]
         }
       ]
@@ -2555,27 +2561,10 @@
         "evaluate_model(gs_model)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gjlcXThuhqoh",
-        "outputId": "ee1865b3-7747-4383-d7ad-67ea30033143"
+        "id": "gjlcXThuhqoh"
       },
-      "execution_count": 98,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'Mean Absolute Error': 1.3590505486911146,\n",
-              " 'R^2': 0.7508902978224619,\n",
-              " 'Valid RMSLE': 0.026178986943672117}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 98
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2618,9 +2607,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WGkzrLhIhssC",
-        "outputId": "2258d560-9194-4617-d16f-2bac695ee658"
+        "outputId": "a3f0cd29-35c3-44f2-a49e-e3f59f11690b"
       },
-      "execution_count": 99,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -2642,9 +2631,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6IKzuMn3sbz4",
-        "outputId": "ec7b63f6-035a-4f89-b879-9c47838c278e"
+        "outputId": "76885dd9-1926-4839-f84c-aa192303697e"
       },
-      "execution_count": 100,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2652,11 +2641,12 @@
             "text/plain": [
               "{'Mean Absolute Error': 1.3411087154922765,\n",
               " 'R^2': 0.7521206002302244,\n",
-              " 'Valid RMSLE': 0.02609988180297771}"
+              " 'Valid RMSLE': 0.02609988180297771,\n",
+              " 'Mean Squared Error': 3.1708489823158796}"
             ]
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 107
         }
       ]
     },
@@ -2666,7 +2656,7 @@
       "metadata": {
         "id": "1E-5E4u-xqdW"
       },
-      "execution_count": 100,
+      "execution_count": 107,
       "outputs": []
     }
   ]
